--- a/package.json
+++ b/package.json
@@ -1,18 +1,15 @@
 {
-  "name": "threejs-prac",
-  "version": "1.0.0",
-  "main": "index.js",
+  "name": "vite-project",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
-  "dependencies": {
-    "three": "^0.167.1"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "devDependencies": {
-    "vite": "^5.4.2"
+    "three": "^0.167.1",
+    "vite": "^5.4.1"
   }
 }
