--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@gsap/react": "^2.1.2",
     "@tailwindcss/vite": "^4.0.1",
     "gsap": "^3.12.7",
+    "locomotive-scroll": "^4.1.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
+    "react-locomotive-scroll": "^0.2.2",
     "tailwindcss": "^4.0.1"
   },
   "devDependencies": {
